--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ ehthumbs.db
 Icon?
 Thumbs.db
 desktop.ini
-
+_mng
 .vscode/
 .idea/
 .nyc_output/
@@ -142,3 +142,8 @@ workspace/
 backups/
 logs/
 spcipts/   # if typo directory is intentional
+security/
+container-mng/monitoring/
+container-mng/security-tools/
+docker-compose-exchange.yaml
+docker-compose-monitoring.yaml
